<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ball_tracker</name>
  <version>0.0.0</version>
  <description>Pacote para detecção e rastreamento de bolas usando ROS 2</description>
  <maintainer email="Todo@gmail.com">newans</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependências para desenvolvimento e testes -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Dependências necessárias para o OpenCV e numpy -->
  <depend>libopencv-dev</depend>
  <depend>python3-numpy</depend>

  <!-- Dependências de compilação -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>my_custom_msgs</build_depend> <!-- Adicione aqui o pacote de mensagens customizadas -->

  <!-- Dependências para exportação (disponíveis para outros pacotes) -->
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>rclpy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>my_custom_msgs</build_export_depend> <!-- Exporta as mensagens customizadas -->

  <!-- Dependências de execução (em tempo de execução) -->
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>my_custom_msgs</exec_depend> <!-- Dependência para as mensagens customizadas -->

  <!-- Configuração de tipo de build (ament_python para pacotes Python) -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
